# warwick-legend

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  analyseRootOutput.C  firstAttempt.cc  test0.mac  warwick-legend.cc
.github/workflows/: ci.yml
examples/GB01muon/: README  exampleGB01.cc  exampleGB01.in
examples/GB01muon/include/: GB01BOptrMultiParticleChangeCrossSection.hh
examples/GB01muon/src/: GB01ActionInitialization.cc  GB01BOptrChangeCrossSection.cc  GB01BOptrMultiParticleChangeCrossSection.cc  GB01DetectorConstruction.cc  GB01PrimaryGeneratorAction.cc
examples/GB03newScorer/: README.md  exampleGB03.cc  exampleGB03.in
examples/GB03newScorer/include/: B4RunAction.hh  B4dEventAction.hh  GB03BOptnSplitOrKillOnBoundary.hh  GB03BOptrGeometryBasedBiasing.hh  GB03DetectorMessenger.hh  GB03PSLocation.hh
examples/GB03newScorer/src/: B4RunAction.cc  B4dEventAction.cc  GB03ActionInitialization.cc  GB03BOptnSplitOrKillOnBoundary.cc  GB03BOptrGeometryBasedBiasing.cc  GB03DetectorConstruction.cc  GB03DetectorMessenger.cc  GB03PSLocation.cc
examples/GB03wFileOut/: README.md  exampleGB03.in
examples/GB03wFileOut/include/: B4RunAction.hh  B4dEventAction.hh  GB03ActionInitialization.hh  GB03DetectorConstruction.hh  GB03PrimaryGeneratorAction.hh
examples/GB03wFileOut/src/: B4RunAction.cc  B4dEventAction.cc  GB03ActionInitialization.cc  GB03DetectorConstruction.cc  GB03PrimaryGeneratorAction.cc
examples/MuEvGen/: CMakeLists.txt  muongenerator.cpp
examples/VisGeometryA/: README.md
examples/VisGeometryA/src/: StandaloneVisAction.cc
examples/VisGeometryB/: README  standalone.cc
examples/VisGeometryB/include/: StandaloneVisAction.hh
examples/VisGeometryB/src/: StandaloneVisAction.cc
examples/exampleGB01/: README  exampleGB01.cc
examples/exampleGB01/include/: GB01ActionInitialization.hh  GB01BOptrChangeCrossSection.hh  GB01DetectorConstruction.hh  (+1 more)
include/: WLGDActionInitialization.hh  WLGDBiasChangeCrossSection.hh  WLGDBiasMultiParticleChangeCrossSection.hh  WLGDCrystalHit.hh  WLGDCrystalSD.hh  WLGDDetectorConstruction.hh  WLGDEventAction.hh  WLGDPSEnergyDeposit.hh  WLGDPSLocation.hh  WLGDPSParentID.hh  WLGDPSTime.hh  WLGDPSTrackID.hh  WLGDPSTrackWeight.hh  WLGDPrimaryGeneratorAction.hh  WLGDRunAction.hh  WLGDStackingAction.hh  WLGDTrackInformation.hh  WLGDTrackingAction.hh  WLGDTrajectory.hh  getopt_pp.h
src/: WLGDActionInitialization.cc  WLGDBiasChangeCrossSection.cc  WLGDBiasMultiParticleChangeCrossSection.cc  WLGDCrystalHit.cc  WLGDCrystalSD.cc  WLGDDetectorConstruction.cc  WLGDEventAction.cc  WLGDPSEnergyDeposit.cc  WLGDPSLocation.cc  WLGDPSParentID.cc  WLGDPSTime.cc  WLGDPSTrackID.cc  WLGDPSTrackWeight.cc  WLGDPrimaryGeneratorAction.cc  WLGDRunAction.cc  WLGDStackingAction.cc  WLGDTrackInformation.cc  WLGDTrackingAction.cc  WLGDTrajectory.cc  getopt_pp.cpp
test/: CMakeLists.txt  test-change-bias.mac  test-gdml-export-exists.cmake  test-gdml-export-run.mac  test-swap-geometry.mac  test0.mac
(+3 files in other folders)
